--- a/To Do List/style.css
+++ b/To Do List/style.css
@@ -46,16 +46,16 @@
 input {
     flex: 1;
     border: 1px solid black;
-    outline: none; /* Changed outline value */
+    outline: none;
     background: transparent;
     padding: 10px;
-    font-size: 14px; /* Changed font-size value */
+    font-size: 14px;
 }
 
 button {
-    border: none; /* Corrected border value */
+    border: none;
     padding: 16px 50px;
-    outline: none; /* Changed outline value */
+    outline: none;
     background: orangered;
     color: #fff;
     font-size: 16px;
@@ -70,6 +70,7 @@ ul li {
     list-style: none;
     padding: 12px 8px 12px 50px;
     position: relative;
+    animation: fade-in 0.5s ease-in-out;
 }
 
 ul li::before {
@@ -106,8 +107,27 @@ ul li span {
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 ul li span:hover {
     background: white;
+}
+
+ul li span:nth-child(2) { /* Style for the edit button */
+    right: 50px;
+}
+
+@keyframes fade-in {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes fade-out {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+
+.fade-out {
+    animation: fade-out 0.5s ease-in-out;
 }
